--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "intl-messageformat": "^10.5.0",
     "lucide-react": "^0.485.0",
     "motion": "^12.6.2",
-    "next": "15.0.4",
+    "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-intersection-observer": "^9.16.0",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
